# blacklist_plugin

./: CMakeLists.txt  README.md  blacklist_plugin.cpp
include/eosio/blacklist_plugin/: blacklist_plugin.hpp
